--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         username = prompt("닉네임을 입력하세요");
         if (!isBlank(username)) {
           setUserName = username
+          $("#userNameDiv").text(username)
           $("#setUserName").val(setUserName)
         }
       }
@@ -81,7 +82,7 @@
       top: 0.5em;
       left: 0.5em;
       right: 0.5em;
-      bottom: 3em;
+      bottom: 4em;
       overflow: auto;
     }
 
@@ -100,10 +101,15 @@
 <body>
 <div id="log"></div>
 <form id="form" name="form">
-  <input type="submit" value="Send"> <input id="msg" size="64" type=
-        "text">
-
+  <br>
+  <br>
+  <br>
+  <div id="userNameDiv" style="color: white"></div>
   <input type="hidden" id="setUserName" name="setUserName">
+  <input id="msg" size="64" type= "text">
+  <input type="submit" value="보내기">
+
+
 </form>
 </body>
 </html>
